--- a/index.html
+++ b/index.html
@@ -8,13 +8,11 @@
 </head>
 <body class="bg-gray-100 text-center">
     <h1 class="text-3xl font-bold text-blue-500">Bienvenue sur mon site</h1>
-    <button class="mt-5 px-4 py-2 bg-blue-500 text-white rounded">
-        Cliquez-moi
-        </button>
-        <img 
-        src="https://placehold.co/150" 
-        alt="Image de test" 
-        class="mt-5 mx-auto rounded-lg">
+    <button class="mt-5 px-4 py-2 bg-blue-500 text-white rounded">Cliquez-moi</button>
+    <img 
+    src="https://placehold.co/150" 
+    alt="Image de test" 
+    class="mt-5 mx-auto rounded-lg">
     code avant </body> :
     <footer class="mt-10 text-gray-600">&#169; 2025 Mon Site</footer>
     
